resorted APB panel to avoid weather boosted numbers overlapping other content, updated collapsible sections to show relevant info when collapsed

--- a/newnew.css
+++ b/newnew.css
@@ -615,14 +615,17 @@ main {
 
 		#apb {
 			display: grid;
+			font-variant: all-small-caps;
+			font-size: 1.75rem;
 			gap: 25px 5px;
-			grid-template-columns: repeat(2, 1fr);
+			grid-template-columns: repeat(3, 1fr);
 			
 			div {
+				align-items: center;
 				border: 1px solid #333;
 				border-radius: 10px;
 				color: #666;
-				font-size: 35px;
+				display: flex;
 				padding: 10px 20px;
 				position: relative;
 				
@@ -634,6 +637,8 @@ main {
 					height: 32px;
 					width: 32px;
 				}
+
+				.cp { margin: 0 3px 0 7px; }
 				
 				.boost {
 					position: absolute;
@@ -745,24 +750,24 @@ main {
 				&[data-type="steel"] i:before	 { background: var(--pokemon-steel); }
 				&[data-type="water"] i:before	 { background: var(--pokemon-water); }
 
-				&[data-type2="bug"] i:after		 { background: linear-gradient(60deg, transparent 75%, var(--pokemon-bug) 80%); }	
-				&[data-type2="dark"] i:after	 { background: linear-gradient(60deg, transparent 75%, var(--pokemon-dark) 80%); }
-				&[data-type2="dragon"] i:after	 { background: linear-gradient(60deg, transparent 75%, var(--pokemon-dragon) 80%); }
-				&[data-type2="electric"] i:after { background: linear-gradient(60deg, transparent 75%, var(--pokemon-electric) 80%); }
-				&[data-type2="fairy"] i:after	 { background: linear-gradient(60deg, transparent 75%, var(--pokemon-fairy) 80%); }
-				&[data-type2="fighting"] i:after { background: linear-gradient(60deg, transparent 75%, var(--pokemon-fighting) 80%); }
-				&[data-type2="fire"] i:after	 { background: linear-gradient(60deg, transparent 75%, var(--pokemon-fire) 80%); }
-				&[data-type2="flying"] i:after	 { background: linear-gradient(60deg, transparent 75%, var(--pokemon-flying) 80%); }
-				&[data-type2="ghost"] i:after	 { background: linear-gradient(60deg, transparent 75%, var(--pokemon-ghost) 80%); }
-				&[data-type2="grass"] i:after	 { background: linear-gradient(60deg, transparent 75%, var(--pokemon-grass) 80%); }
-				&[data-type2="ground"] i:after	 { background: linear-gradient(60deg, transparent 75%, var(--pokemon-ground) 80%); }
-				&[data-type2="ice"] i:after		 { background: linear-gradient(60deg, transparent 75%, var(--pokemon-ice) 80%); }
-				&[data-type2="normal"] i:after	 { background: linear-gradient(60deg, transparent 75%, var(--pokemon-normal) 80%); }
-				&[data-type2="poison"] i:after	 { background: linear-gradient(60deg, transparent 75%, var(--pokemon-poison) 80%); }
-				&[data-type2="psychic"] i:after	 { background: linear-gradient(60deg, transparent 75%, var(--pokemon-psychic) 80%); }
-				&[data-type2="rock"] i:after	 { background: linear-gradient(60deg, transparent 75%, var(--pokemon-rock) 80%); }
-				&[data-type2="steel"] i:after	 { background: linear-gradient(60deg, transparent 75%, var(--pokemon-steel) 80%); }
-				&[data-type2="water"] i:after	 { background: linear-gradient(60deg, transparent 75%, var(--pokemon-water) 80%); }
+				&[data-type2="bug"] i:after		 { background: linear-gradient(150deg, transparent 70%, var(--pokemon-bug) 75%); }	
+				&[data-type2="dark"] i:after	 { background: linear-gradient(150deg, transparent 70%, var(--pokemon-dark) 75%); }
+				&[data-type2="dragon"] i:after	 { background: linear-gradient(150deg, transparent 70%, var(--pokemon-dragon) 75%); }
+				&[data-type2="electric"] i:after { background: linear-gradient(150deg, transparent 70%, var(--pokemon-electric) 75%); }
+				&[data-type2="fairy"] i:after	 { background: linear-gradient(150deg, transparent 70%, var(--pokemon-fairy) 75%); }
+				&[data-type2="fighting"] i:after { background: linear-gradient(150deg, transparent 70%, var(--pokemon-fighting) 75%); }
+				&[data-type2="fire"] i:after	 { background: linear-gradient(150deg, transparent 70%, var(--pokemon-fire) 75%); }
+				&[data-type2="flying"] i:after	 { background: linear-gradient(150deg, transparent 70%, var(--pokemon-flying) 75%); }
+				&[data-type2="ghost"] i:after	 { background: linear-gradient(150deg, transparent 70%, var(--pokemon-ghost) 75%); }
+				&[data-type2="grass"] i:after	 { background: linear-gradient(150deg, transparent 70%, var(--pokemon-grass) 75%); }
+				&[data-type2="ground"] i:after	 { background: linear-gradient(150deg, transparent 70%, var(--pokemon-ground) 75%); }
+				&[data-type2="ice"] i:after		 { background: linear-gradient(150deg, transparent 70%, var(--pokemon-ice) 75%); }
+				&[data-type2="normal"] i:after	 { background: linear-gradient(150deg, transparent 70%, var(--pokemon-normal) 75%); }
+				&[data-type2="poison"] i:after	 { background: linear-gradient(150deg, transparent 70%, var(--pokemon-poison) 75%); }
+				&[data-type2="psychic"] i:after	 { background: linear-gradient(150deg, transparent 70%, var(--pokemon-psychic) 75%); }
+				&[data-type2="rock"] i:after	 { background: linear-gradient(150deg, transparent 70%, var(--pokemon-rock) 75%); }
+				&[data-type2="steel"] i:after	 { background: linear-gradient(150deg, transparent 70%, var(--pokemon-steel) 75%); }
+				&[data-type2="water"] i:after	 { background: linear-gradient(150deg, transparent 70%, var(--pokemon-water) 75%); }
 			}
 		}
 
@@ -841,10 +846,17 @@ main {
 					border-bottom: 1px solid;
 					border-image-slice: 1;
 					border-image-source: linear-gradient(to left, var(--bs-gray-800) 42.75%, transparent 42.75%, transparent 57.25%, var(--bs-gray-800) 57.25%);
-					height: 30px;
+					min-height: 30px;
 					overflow: hidden;
 					padding-bottom: 10px;
 					position: relative;
+
+					&:not(.effectiveness) p { display: none; }
+					#megas { margin: .5em auto; }
+
+					&.mega-buddies { max-height:60px; }
+					&.effectiveness { max-height:30px; }
+					&.cp-chart { max-height:75px; }
 
 					&:before, &:after{
 						bottom: 0;
@@ -881,11 +893,12 @@ main {
 			article {
 				display: grid;
 				grid-template-columns: repeat(5, 1fr);
+				text-align: center;
 				
 				div {
 					display: grid;
 					grid-template-columns: repeat(3, 1fr);
-					padding: 5px 10px;			
+					padding: 5px;			
 				}
 			}
 		}
@@ -952,18 +965,9 @@ dialog {
 
 @media (min-width: 700.1px) {
 	main #pokemon {
-		#apb {
-			grid-template-columns: repeat(3, 1fr);
-				
-			.wild-w 	{ order: 0; }	
-			.wild		{ order: 1; }		
-			.research	{ order: 2; }
-			.raid-w		{ order: 3; }		
-			.raid		{ order: 4; }
-			.hatched	{ order: 5; }
-		}
-
 		.grid-table article {
+			padding: .5rem 0;
+
 			div:nth-child(odd) {
 				background: #dadada;
 			}
@@ -1015,6 +1019,19 @@ dialog {
 		}
 
 		#pokemon {
+			#apb {		
+				grid-template-columns: repeat(2, 1fr);			
+
+				.wild		{ order: 0; }
+				.raid		{ order: 1; }
+				.wild-w 	{ order: 2; }
+				.raid-w		{ order: 3; }
+				.research	{ order: 4; }
+				.hatched	{ order: 5; }
+			}
+
+			h3.hide + div.mega-buddies { max-height:105px; }
+
 			#megas {
 				grid-template-columns: repeat(3, 1fr);
 			}
@@ -1023,6 +1040,7 @@ dialog {
 				aside,
 				article {
 					grid-template-columns: repeat(2, 1fr);
+					padding: .5rem 0;
 
 					.x2-hide {
 						display: none;
